# rra-climate-health

./: .cruft.json  .gitignore  2024_04_19_BMI_climate.ipynb  2024_05_01_RE_Stunting.ipynb  2024_06_21_BetterPrediction.ipynb  404.html  LICENSE  README.md  cgf_utils.py  fhs_prediction.py  get_climate_vars_year.py  index.html  location_mapping.py  make_model.py  mf.py  mkdocs.yml  model_runner_jobmon.py  objects.inv  paths.py  pred_runner_jobmon.py  predict_using_model.py  pyproject.toml  threshold_worker_linear.py
.github/workflows/: docs.yml
api_docs/: index.html
changelog/: index.html
docs/: api_docs.md  inference.md  inputs.md  model.md
inference/: index.html
inputs/: index.html
malnutrition/: 20240718_stunting_model_gbd_comparison.py  20240718_wasting_model_gbd_comparison.py  malnutrition_modeling_future_sevs_from_prevs.py  sep_sex_age_stunting_residual_model.py  sep_sex_age_wasting_residual_model.py  stunting_residual_model.py  wasting_residual_model.py
model/: index.html
notebooks/: 2024_04_19_Plotting_BMI_Climate.ipynb  2024_06_21_BetterPrediction.ipynb  2024_06_25_compare_to_GBD.ipynb  2024_06_30_model_inference.ipynb  2024_06_30_model_training.ipynb  2024_07_01_feature_exploration.ipynb  2024_07_02_postprocessing.ipynb  2024_07_03_save_gbd_prevalence.ipynb  2024_10_20_sev_shift.ipynb  2025_09_02_AnemiaDataInvestigation.ipynb  Untitled-Copy1.ipynb  Untitled.ipynb  _sandbox.ipynb
search/: search_index.json
specifications/: stunting.yaml  stunting_test.yaml  stunting_timesdi.yaml  tempgrid_o30.yaml  wasting.yaml
src/rra_climate_health/: __init__.py  cli.py  cli_options.py  data.py  model_specification.py  paths.py  results_specification.py  utils.py
src/rra_climate_health/data_prep/: __init__.py  location_mapping.py  run_inference_data_prep.py  run_training_data_prep.py  upstream_paths.py
src/rra_climate_health/data_prep/extraction_scripts/: 00_DHS_c_extract_data_upd.R  00_MICS_c_extract_data_upd.R  01_compile_data_sources_upd.R  02_standardize_extractions_upd.R  cgf_data_prep_upd.R  hic_cgf_data_prep_upd.R  merge_cgf_wealth.R  visualizations.R
src/rra_climate_health/data_prep/extraction_scripts/archive_unused/lsae_cgf/: cgf_data_prep.R  ubcov_cgf.do  undernutrition_post_extraction_processing.R
src/rra_climate_health/data_prep/extraction_scripts/archive_unused/wealth/: 00_COUNTRY_SPECIFIC_a_preprocess.R  00_COUNTRY_SPECIFIC_b_run_ubcov.txt  00_COUNTRY_SPECIFIC_c_extract_data.R  00_DHS_c_extract_data.R  00_EUROSTAT_extract_data.R  00_GDL_extract_data.R  00_IPUMS_a_preprocess.R  00_IPUMS_b_run_ubcov.txt  00_IPUMS_c_extract_data.R  00_LSMS_c_extract_data.R  00_MICS_c_extract_data.R  02_standardize_extractions.R
src/rra_climate_health/data_prep/extraction_scripts/gbd_cgf/: 2_microdata_processing.R  2_microdata_processing_functions.R
src/rra_climate_health/data_prep/extraction_scripts/lsae_cgf/: cgf_data_prep_upd.R  hic_cgf_data_prep_upd.R  survey_extraction_prep.R
src/rra_climate_health/data_prep/extraction_scripts/wealth/: 00_CEIC_national_extract_data.R  00_CEIC_subnational_extract_data.R  00_DHS_a_preprocess.R  00_DHS_b_run_ubcov.txt  00_DHS_c_extract_data_upd.R  00_LSMS_a_preprocess.R  00_LSMS_b_run_ubcov.txt  00_MICS_b_run_ubcov.txt  00_OECD_extract_data.R  00_USHD_extract_data.R  01_compile_data_sources.R  01_compile_data_sources_upd.R  02_standardize_extractions_upd.R
src/rra_climate_health/inference/: __init__.py  inference_diagnostics.py  run_inference.py
src/rra_climate_health/training/: __init__.py  run_training.py
src/rra_climate_health/transforms/: __init__.py  binning.py  masking.py  scaling.py
src/spatial_temp_cgf/: __init__.py  binning.py  cgf_utils.py  cli.py  cli_options.py  data.py  data_model.py  datamodel.py  get_climate_vars_year.py  income_funcs.py  mf.py  model.py  model_specification.py  paths.py  plotting.py  pred_runner_jobmon.py  predict_using_model.py  predictor_worker_filter.py  results_specification.py  scaling.py  threshold_worker_linear.py  utils.py
src/spatial_temp_cgf/_archive/: cgf_utils.py  income_funcs.py  mf.py  paths.py  predictor_worker_filter.py  threshold_worker_linear.py
src/spatial_temp_cgf/data_prep/: __init__.py  get_climate_vars_year.py  income_funcs.py  run_inference_data_prep.py  run_training_data_prep.py  upstream_paths.py
src/spatial_temp_cgf/inference/: __init__.py  inference_diagnostics.py  inference_task.py  run_inference.py
src/spatial_temp_cgf/pipeline/inference/: fhs_prediction.py  predict_using_model.py  predictor_worker_filter.py
src/spatial_temp_cgf/pipeline/training/: model_runner_jobmon.py
src/spatial_temp_cgf/training/: __init__.py  make_model.py  mf.py  model_runner_jobmon.py  run_training.py
src/spatial_temp_cgf/training_data_prep/: __init__.py  income_funcs.py  location_mapping.py  run_training_data_prep.py
src/spatial_temp_cgf/transforms/: __init__.py  binning.py  masking.py  scaling.py
tests/: test_rra_climate_health.py
